--- a/src/ComponentsStyles/job/jobcardcomp.css
+++ b/src/ComponentsStyles/job/jobcardcomp.css
@@ -514,7 +514,15 @@
     }
   
     .job-title {
-      font-size: 1.125rem;
+      font-size: 0.93rem;
+      font-weight: 700;
+      color: var(--text-primary);
+      margin: 0 0 0.5rem;
+      line-height: 1.4;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
   }
   
